syntax = "proto3";

option go_package = "./;pb";

package proto;

import "common.proto";

service QueListService {
  rpc GetQueList (GetQueListRequest) returns (GetQueListReply) {};
}

message GetQueListRequest {
  string page = 1;
  string amount = 2;
}

message QueList {
  int64 id = 1;
  string title = 2;
  string time = 3;
}

message GetQueListReply {
  repeated QueList list = 1;
  Pager pager = 2;
}
